[ALLI-3835] [ALLI-4234] In national theme top menu, a minor open menu layout bug was fixed and align to grid improved. Also added missing &'s to bootstrap.less although all containers should be within body anyway.

--- a/themes/finna/less/bootstrap.less
+++ b/themes/finna/less/bootstrap.less
@@ -20,11 +20,11 @@ body {
     background-repeat: no-repeat;
     // fine-tune tablet layout 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-        .container {
+        & .container {
             width: auto;
         }
         // element-specific adjustments
-        .main {
+        & .main {
             & .record-view-header {
                 margin-left: -15px;
                 margin-right: -15px;
